--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,6 +7,11 @@ on:
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version:
+        - 'pypy3.8'
+
     container: cypress/browsers:node12.18.3-chrome87-ff82
     steps:
       - name: Checkout
@@ -16,7 +21,8 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: openedx/xblock-sdk
-          path: xblock-sdk       
+          path: xblock-sdk
+          python-version: ${{ matrix.python-version }}      
 
       - name: Setup xblock-sdk
         working-directory: xblock-sdk
