--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,6 @@ jobs:
         with:
           repository: openedx/xblock-sdk
           path: xblock-sdk
-          python-version: ${{ matrix.python-version }}      
 
       - name: Setup xblock-sdk
         working-directory: xblock-sdk
@@ -39,4 +38,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
+          wait-on: 'http://localhost:3000'
+          wait-on-timeout: 120
           browser: chrome
+          record: true
