--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,9 +17,12 @@ jobs:
         uses: actions/checkout@v2
 
       - name: setup python
-        uses: actions/setup-python@v2
+        uses: actions/setup-python@v4
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: setup django
+        run: pip install django
 
       - name: Checkout xblock-sdk repo
         uses: actions/checkout@v3
@@ -38,7 +41,7 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          wait-on: 'http://localhost:3000'
+          wait-on: 'http://localhost:8000'
           wait-on-timeout: 120
           browser: chrome
           record: true
