--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,6 +24,11 @@ jobs:
       - name: print python
         run: python --version
 
+      - name: install pip
+        run: sudo apt update
+        run: sudo apt install python3-pip
+        run: pip3 --version
+
 
       - name: setup django
         run: pip install django
