--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,8 @@ jobs:
           python-version: ${{ matrix.python-version }}
 
       - name: print python
-        run: python --version
-
-      - name: install pip
+        run: |
+        python --version
         run: sudo apt update
         run: sudo apt install python3-pip
         run: pip3 --version
