chore: workflow fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,8 +24,8 @@ jobs:
       - name: print python
         run: |
           python --version
-          apt update -y
-          apt install python3-pip
+          apt update -qq
+          apt install -y python3-pip
           pip3 --version
 
       - name: setup django
