chore: fix workflow

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,11 +37,11 @@ jobs:
           repository: openedx/xblock-sdk
 
       - name: Setup xblock-sdk
-        working-directory: xblock-sdk
+        working-directory: ./xblock-sdk
         run: make install
 
       - name: Run xblock-sdk server
-        working-directory: xblock-sdk
+        working-directory: ./xblock-sdk
         run: python manage.py runserver
 
       - name: Cypress run
