--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,13 +35,14 @@ jobs:
         uses: actions/checkout@v3
         with:
           repository: openedx/xblock-sdk
+          path: xblock-sdk
 
       - name: Setup xblock-sdk
-        working-directory: ./xblock-sdk
+        working-directory: xblock-sdk
         run: make install
 
       - name: Run xblock-sdk server
-        working-directory: ./xblock-sdk
+        working-directory: xblock-sdk
         run: python manage.py runserver
 
       - name: Cypress run
