--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,17 +16,17 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      # - name: setup python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
 
       - name: install pip
         run: |
           python --version
           apt update -qq
-          apt install -y python3-pip
-          pip3 --version
+          # apt install -y python3-pip
+          # pip3 --version
 
       # - name: setup django
       #   run: pip install django
