chore: workflow fix

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: install pip
         run: |
-          python --version
+          # python --version
           apt update -qq
           # apt install -y python3-pip
           # pip3 --version
