--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,18 +16,20 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      - name: setup python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+      # - name: setup python
+      #   uses: actions/setup-python@v4
+      #   with:
+      #     python-version: ${{ matrix.python-version }}
 
       - name: install pip
-        run: |          
-          apt update -qq
-          apt install -y python3-pip
-          python --version
-          pip3 --version
-          pip --version
+        run: |  
+          lsb_release -a
+          python3 --version        
+          # apt update -qq
+          # apt install -y python3-pip
+          # python --version
+          # pip3 --version
+          # pip --version
 
       # - name: setup django
       #   run: pip install django
