--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,12 +24,13 @@ jobs:
       - name: install pip
         run: |  
           cat /etc/*-release
-          python3 --version        
+          python3 --version
+          python3 -m pip install --upgrade pip setuptools wheel        
           # apt update -qq
           # apt install -y python3-pip
           # python --version
           # pip3 --version
-          # pip --version
+          pip --version
 
       # - name: setup django
       #   run: pip install django
@@ -44,8 +45,8 @@ jobs:
         working-directory: xblock-sdk
         run: |
           pwd
-          pip3 install -r requirements/dev.txt
-          pip3 install -r requirements/local.txt
+          pip install -r requirements/dev.txt
+          pip install -r requirements/local.txt
           python ./manage.py runserver
 
       - name: Cypress run
