--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,7 +27,7 @@ jobs:
           python3 --version
           # python3 -m ensurepip --default-pip
           #python3 -m pip install --upgrade pip setuptools wheel        
-          # apt update -qq
+          apt update -qq
           apt install -y python3-pip
           # python --version
           pip3 --version
@@ -46,8 +46,8 @@ jobs:
         working-directory: xblock-sdk
         run: |
           pwd
-          pip3 install -r requirements/dev.txt
-          pip3 install -r requirements/local.txt
+          pip install -r requirements/dev.txt
+          pip install -r requirements/local.txt
           python ./manage.py runserver
 
       - name: Cypress run
