--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           pwd
           pip install -r requirements/dev.txt
           pip install -r requirements/local.txt
-          python ./manage.py runserver
+          python3 ./manage.py runserver
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
