--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,9 @@ jobs:
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
-        working-directory: tests/cypress
         with:
           wait-on: 'http://localhost:8000'
           wait-on-timeout: 120
           browser: chrome
           record: true
+          project: ./tests/cypress
