--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,4 +63,4 @@ jobs:
           wait-on-timeout: 120
           browser: chrome
           record: true
-          project: ./tests/cypress
+          working-directory: tests/cypress
