--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           pwd
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
-          nohup python3 ./manage.py runserver > runserver.log &
+          python3 ./manage.py runserver > runserver.log &
       
       - name: Archive runserver log
         uses: actions/upload-artifact@v3
@@ -56,11 +56,11 @@ jobs:
           name: runserver-log
           path: xblock-sdk/runserver.log
 
-      - name: Cypress run
-        uses: cypress-io/github-action@v4
-        with:
-          wait-on: 'http://localhost:8000'
-          wait-on-timeout: 120
-          browser: chrome
-          record: true
-          working-directory: tests/cypress
+      # - name: Cypress run
+      #   uses: cypress-io/github-action@v4
+      #   with:
+      #     wait-on: 'http://localhost:8000'
+      #     wait-on-timeout: 120
+      #     browser: chrome
+      #     record: true
+      #     working-directory: tests/cypress
