--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,8 @@ jobs:
           pwd
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
-          python3 ./manage.py runserver
+          nohup python3 ./manage.py runserver &
+          wget http://localhost:8000 > runserver.log
       
       - name: Archive runserver log
         uses: actions/upload-artifact@v3
@@ -56,6 +57,13 @@ jobs:
           name: runserver-log
           path: xblock-sdk/runserver.log
 
+      - name: Archive nohup log
+        uses: actions/upload-artifact@v3
+        with:
+          name: nohup-log
+          path: xblock-sdk/nohup.out
+
+          
       # - name: Cypress run
       #   uses: cypress-io/github-action@v4
       #   with:
