--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           pwd
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
-          nohup python3 ./manage.py runserver &
+          nohup python3 ./manage.py runserver > runserver.out 2>&1 &
           wget -b http://localhost:8000
       
       - name: Archive runserver log
@@ -61,7 +61,7 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: nohup-log
-          path: xblock-sdk/nohup.out
+          path: xblock-sdk/runserver.out
 
           
       # - name: Cypress run
