--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           pwd
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
-          nohup python3 ./manage.py runserver > runserver.out 2>&1 &
+          python3 ./manage.py runserver >> runserver.out 2>&1 &
           wget -b http://localhost:8000
       
       - name: Archive runserver log
