--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,7 +49,7 @@ jobs:
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
           python3 ./manage.py runserver >> runserver.log 2>&1 &
-          google-chrome-stable --headless --disable-gpu --print-to-pdf http://localhost:8000
+          google-chrome-stable --no-sandbox --headless --disable-gpu --print-to-pdf http://localhost:8000
       
       - name: Archive wget log
         uses: actions/upload-artifact@v3
