--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,13 +49,13 @@ jobs:
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
           python3 ./manage.py runserver >> runserver.log 2>&1 &
-          google-chrome-stable --no-sandbox --headless --disable-gpu --print-to-pdf http://localhost:8000
+          google-chrome-stable --no-sandbox --headless --screenshot http://127.0.0.1:8000
       
       - name: Archive wget log
         uses: actions/upload-artifact@v3
         with:
           name: wget-log
-          path: xblock-sdk/output.pdf
+          path: xblock-sdk/screenshot.png
 
       - name: Archive runserver log
         uses: actions/upload-artifact@v3
