--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,6 +48,7 @@ jobs:
           pwd
           pip install -qr requirements/dev.txt
           pip install -qr requirements/local.txt
+          python3 manage.py migrate --noinput
           python3 ./manage.py runserver >> runserver.log 2>&1 &
           google-chrome-stable --no-sandbox --headless --screenshot http://127.0.0.1:8000
       
