--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,15 +23,9 @@ jobs:
 
       - name: install pip
         run: |  
-          cat /etc/*-release
-          python3 --version
-          # python3 -m ensurepip --default-pip
-          #python3 -m pip install --upgrade pip setuptools wheel        
           apt update -qq
-          apt install -y python3-pip curl iproute2
-          # python --version
+          apt install -y python3-pip
           pip3 --version
-          # pip --version
 
       # - name: setup django
       #   run: pip install django
@@ -65,26 +59,6 @@ jobs:
         uses: juliangruber/sleep-action@v1
         with:
           time: 5s
-          
-      # - name: monitor
-      #   working-directory: xblock-sdk
-      #   run: |          
-      #     ss -tulpn
-      #     curl http://localhost:8000 -o output.log
-      #     #google-chrome-stable --disable-gpu --no-sandbox --headless --screenshot http://127.0.0.1:8000
-      
-      # - name: Archive wget log
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: wget-log
-      #     path: xblock-sdk/screenshot.png
-
-      # - name: Archive runserver log
-      #   uses: actions/upload-artifact@v3
-      #   with:
-      #     name: runserver-log
-      #     path: xblock-sdk/output.log
-
           
       - name: Cypress run
         uses: cypress-io/github-action@v4
